<resources>
    <string name="app_name">Dual Battery Widget</string>
    <string name="widget_name">Dual Battery Widget</string>
    <string name="widget_name_2x2">Dual Battery Widget 2x2</string>
    <string name="widget_name_3x4">Dual Battery Widget 3x4</string>

    <string name="undocked">Not docked</string>
    <string name="unknown">Unknown</string>
    <string name="battery_main">Main</string>
    <string name="battery_dock">Dock</string>
    <string name="settings">Settings</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="days">%s days</string>

    <string name="showBatterySummary">Show Battery Summary</string>

    <string name="propHeader_BatteryInfo">Battery information</string>
    <string name="propHeader_Properties">Widget properties</string>
    <string name="propHeader_Feedback">Feedback</string>
    <string name="propHeader_Donate">Donate</string>
    <string name="propHeader_About">About</string>

    <string name="propTitle_General">General</string>
    <string name="propTitle_Dock">Dock battery options</string>

    <string name="prop_batterySelection">Battery to display</string>
    <string name="prop_alwaysShowDock">Always show dock battery</string>
    <string name="prop_alwaysShowDock_summary">Show the dock battery gauge even when not docked</string>
    <string name="prop_showNotDockedMsg">Show status when not docked</string>
    <string name="prop_showNotDockedMsg_summary">Show a message stating that the secondary battery is not connected when not docked</string>
    <string name="prop_textPosition">Text position</string>
    <string name="prop_textPosition_summary">Where to display the battery status (%s)</string>
    <string name="prop_textSize">Text size</string>
    <string name="prop_textColor">Text colour</string>
    <string name="prop_margin">Margin location</string>
    <string name="prop_margin_summary">Margin size is the same as the text size (%s)</string>
    <string name="prop_showLabel">Show battery label</string>
    <string name="prop_showLabel_summary">
        Shows the battery label in the bottom margin.
        \nCan be overruled if the battery status is displayed in the same place
    </string>
    <string name="prop_showDockHistory">Show old level</string>
    <string name="prop_showDockHistory_summary">Show the last recorded dock battery level when not docked</string>
    <string name="prop_swapBatteries">Swap Battery icons</string>
    <string name="prop_tempUnits">Temperature units</string>
    <string name="prop_showNotificationIcon">Show notification icon</string>
    <string name="prop_showNotificationIcon_summary">Show the dock battery level in the notification area</string>
    <string name="prop_defaultDaysTab">Default history period</string>

    <string name="sett_textPos_Invisible">Invisible</string>
    <string name="sett_textPos_Above">Above</string>
    <string name="sett_textPos_Top">Top</string>
    <string name="sett_textPos_Middle">Middle</string>
    <string name="sett_textPos_Bottom">Bottom</string>
    <string name="sett_textPos_Below">Below</string>
    <string name="sett_battSel_Both">Both</string>
    <string name="sett_battSel_Main">Main battery only</string>
    <string name="sett_battSel_Dock">Dock battery only</string>
    <string name="sett_textColor_White">White</string>
    <string name="sett_textColor_Black">Black</string>
    <string name="sett_margin_None">None</string>
    <string name="sett_margin_Top">Top</string>
    <string name="sett_margin_Bottom">Bottom</string>
    <string name="sett_margin_Both">Both</string>
    <string name="sett_tempUnits_C">Celsius</string>
    <string name="sett_tempUnits_F">Fahrenheit</string>
    <string name="sett_defaultDaysTab_3">3 Days</string>
    <string name="sett_defaultDaysTab_7">7 Days</string>
    <string name="sett_defaultDaysTab_30">30 Days</string>

    <string name="about_full">
        The Dual Battery Widget was initially created for the Asus Eee Pad Transformer,
        a device that has a second battery in the dock station. Unfortunately, the standard Android tools
        do not provide any way of displaying the status of a second battery, so this widget was created
        to fill this gap.
        \n
        \nCreated by: Artiom Chilaru http://www.flexlabs.org
        \nIt is distributed for free from the Google Play store and on GitHub
        \n
        \nYou can install the widget from the google play store here:
        \n
        \nThe widget is open source, and licensed with the Apache License 2.0
        \nFeel free to contribute to the development of the project, by forking the project on GitHub:
        \nhttps://github.com/artiomchi/Dual-Battery-Widget
        \n
        \nIf you want to help translating this project, you can do so here:
        \nhttp://translate.dualbattery.flexlabs.org
        \n
        \nMany thanks to all the people who helped with the translation of the project, including:
    </string>
    <string name="about_0_head">
        The Dual Battery Widget was initially created for the Asus Eee Pad Transformer,
        a device that has a second battery in the dock station. Unfortunately, the standard Android tools
        do not provide any way of displaying the status of a second battery, so this widget was created
        to fill this gap.
        \n
    </string>
    <string name="about_1_author">Created by: Artiom Chilaru</string>
    <string name="about_2_projectpage">Project page:</string>
    <string name="about_3_source">
        \nThe widget is open source, and licensed with the Apache License 2.0
        \nFeel free to contribute to the development of the project, by forking the project on GitHub:
    </string>
    <string name="about_4_translate">
        \nIf you want to help translating this project, you can do so here:
    </string>
    <string name="about_5_translators_thanks">
        \n
        \nMany thanks to all the people who helped with the translation of the project, including:
    </string>

    <string name="feedback_head">
        Thank you for taking the time to fill in this form. I value your opinion, and always want to make this widget better
        \n
        \nTell us what you think of the widget, or what you would like to see in future versions, and I will get back in touch with you
    </string>
    <string name="feedback_hint">Please enter your feedback</string>

    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_last_charged_label">Last time charged:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units_mV">mV</string>
    <string name="battery_info_voltage_units_V">V</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_dock_status_label">Dock battery status:</string>
    <string name="battery_info_dock_level_label">Dock battery level:</string>
    <string name="battery_info_dock_last_connected_label">Dock last connected:</string>

    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>

    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>

    <string name="battery_info_dock_status_charging">Charging</string>
    <string name="battery_info_dock_status_discharging">Discharging</string>
    <string name="battery_info_dock_status_docked">Docked</string>
    <string name="battery_info_dock_status_undocked">Not docked</string>

    <string name="donate_head">
        Thank you for choosing to support my widget. Your help is greatly appreciated!
        \n
        \nPlease choose one of the options below
    </string>
    <string name="donate_play">Google Play</string>
    <string name="donation_play_1">Standard (£0.99)</string>
    <string name="donation_play_3">Buy me a drink (£3.00)</string>
    <string name="donation_play_7">If you really like number 7 (£7.77)</string>
    <string name="donate_paypal">PayPal</string>
    <string name="donation_paypal">Go to PayPal</string>

    <string name="alert_just_swapped">IMPORTANT! With this version we have switched the default order of the icons in the widget (you can change it back in the widget settings). The dock battery will now be the on the left, and the main battery on the right side, to reflect the changes in the new Asus updates!</string>
</resources>