<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:flexlabs="http://schemas.android.com/apk/res/org.flexlabs.widgets.dualbattery">
    <PreferenceCategory android:title="@string/propTitle_General">
        <org.flexlabs.widgets.dualbattery.ui.SeekBarPreference
                android:key="textSize"
                android:title="@string/prop_textSize" flexlabs:summary="@string/prop_textSize_summary"
                android:defaultValue="14" android:max="100" />
        <org.flexlabs.widgets.dualbattery.ui.IntegerListPreference
                android:key="textColor"
                android:title="@string/prop_textColor" flexlabs:summary="@string/prop_textColor_summary"
                flexlabs:entries="@array/textColor_labels" flexlabs:entryValues="@array/textColor_values"
                android:defaultValue="0" />
        <org.flexlabs.widgets.dualbattery.ui.IntegerListPreference
                android:key="textPosition"
                android:title="@string/prop_textPosition" flexlabs:summary="@string/prop_textPosition_summary"
                flexlabs:entries="@array/textPosition_labels" flexlabs:entryValues="@array/textPosition_values"
                android:defaultValue="2" />
        <org.flexlabs.widgets.dualbattery.ui.IntegerListPreference
                android:key="marginLocation"
                android:title="@string/prop_margin" flexlabs:summary="@string/prop_margin_summary"
                flexlabs:entries="@array/margin_labels" flexlabs:entryValues="@array/margin_values"
                android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>